<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img11"
    tools:context=".sanitizationraise">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/cmplantfrm"
            android:layout_width="match_parent"

            android:layout_height="84dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/slr"
            android:textColor="@android:color/white"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descp"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prblm"
            android:layout_marginStart="5dp"

            android:layout_marginTop="40dp"

            android:layout_marginEnd="45dp"

            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/descwhiteimg"
            android:padding="10dp"
            android:text="@string/Description"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/desctxt"
            android:layout_width="246dp"
            android:layout_height="45dp"
            android:layout_below="@id/prblm"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/sc1"

            android:drawablePadding="20dp"

            android:inputType="textMultiLine"
            android:padding="1dp"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/mbnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp"
            android:padding="10dp"
            android:drawableLeft="@drawable/phonwhiteimg"
            android:text="@string/Mobile"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/phn"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/descp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/sc1"
            android:layout_marginBottom="20dp"

            android:drawablePadding="20dp"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phn"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/Address"
            android:drawableLeft="@drawable/locwhiteimg"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/doorno"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/mbnum"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/sc1"

            android:drawablePadding="20dp"
            android:padding="10dp"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/currloc"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/loc"
            android:layout_marginTop="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="1dp"
            android:backgroundTint="@color/teal_700"
            android:padding="1dp"
            android:text="@string/ggpss"

            android:textColor="@color/white"
            android:textSize="16dp" />

        <Button
            android:id="@+id/capture_image_button"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/Capture"
            android:textColor="@color/white"
            android:textSize="20dp"
            />

        <ImageButton
            android:id="@+id/img1"
            android:layout_width="144dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop"
            android:layout_marginStart="150dp"
            android:src="@drawable/ic_baseline_image_24"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_primary40"
            android:layout_marginTop="40dp"
            android:id="@+id/next"
            android:layout_marginBottom="70dp"
            android:layout_marginStart="160dp"
            android:text="@string/Submit"
            android:onClick="onClick"
            android:textSize="20dp" />
    </LinearLayout>
</ScrollView>