<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img11"
    tools:context=".avinash">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic|bold"
            android:textSize="30dp"
            android:text="@string/cyp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_marginStart="35dp"
            android:id="@+id/textview"
            android:layout_marginTop="15dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview"
            android:id="@+id/sl"

            android:layout_marginTop="25dp"
            app:cardCornerRadius="30dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"

                    android:src="@drawable/ssaavvii"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sll"
                    android:layout_gravity="center"

                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>





        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sl"
            android:id="@+id/wt"

            android:layout_marginTop="13dp"
            app:cardCornerRadius="30dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/watertap"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wtp"
                    android:layout_gravity="center"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/san"
            android:id="@+id/road"

            android:layout_marginTop="13dp"
            app:cardCornerRadius="30dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/road2"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp"
                    android:layout_gravity="center"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>








        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wt"
            android:id="@+id/san"

            android:layout_marginTop="13dp"
            app:cardCornerRadius="30dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/dustbin"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/san"
                    android:layout_gravity="center"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/road"
            android:id="@+id/other"

            android:layout_marginTop="13dp"
            app:cardCornerRadius="30dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/qm"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oth"
                    android:layout_gravity="center"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_dark"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>










    </LinearLayout>
</ScrollView>