<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic|bold"
        android:textSize="40dp"
        android:text="     Local Clamour"
        android:textColor="@android:color/holo_blue_dark"
        android:gravity="center"
        android:layout_marginStart="35dp"
        android:id="@+id/textview"
        android:layout_marginTop="30dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        android:columnCount="2"
        android:rowCount="2">


        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/people"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_emoji_people_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Public"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="30dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:id="@+id/authority"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:clickable="true"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/aut1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Authority"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="30dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:id="@+id/contact"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:clickable="true"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_local_phone_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Contact"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="30dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:clickable="true"
            android:id="@+id/help"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ic_baseline_help_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Help"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="30dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>


</RelativeLayout>