<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    tools:context=".MainActivity13">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AP Grama Sachivalayam Kanuru-1"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:id="@+id/scrollview1"
            android:padding="5dp"
            android:textSize="40dp"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/scrollview1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="40dp"
            android:columnCount="2"
            android:rowCount="4">








            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:id="@+id/contact"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:clickable="true"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/ic_baseline_directions_run_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/point3"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="30dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/people1"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_baseline_location_on_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/point1"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="30dp"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/authority1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_camera_alt_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/point2"
                        android:textAlignment="center"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="30dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>
</ScrollView>
